gearset/main/default/objects/ObjectWeWillChangeValues__c/ObjectWeWillChangeValues__c.object-meta.xml
<CustomObject>
    <label>ObjectWeWillChangeValues</label>
    <nameField>
        <label>ObjectWeWillChangeValues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectWeWillChangeValuess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>