gearset/main/default/objects/ObjectWeWillChangeValues__c/fields/SomeEmail__c.field-meta.xml
<CustomField>
    <fullName>SomeEmail__c</fullName>
    <label>SomeEmail</label>
    <type>Email</type>
</CustomField>