gearset/main/default/objects/ObjectWeWillChangeValues__c/fields/somePercent__c.field-meta.xml
<CustomField>
    <fullName>somePercent__c</fullName>
    <label>somePercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>