gearset/main/default/objects/ObjectWeWillChangeValues__c/fields/somePhone__c.field-meta.xml
<CustomField>
    <fullName>somePhone__c</fullName>
    <label>somePhone</label>
    <type>Phone</type>
</CustomField>