gearset/main/default/objects/ObjectWeWillChangeValues__c/fields/someUrl__c.field-meta.xml
<CustomField>
    <fullName>someUrl__c</fullName>
    <label>someUrl</label>
    <type>Url</type>
</CustomField>